--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
@@ -23,7 +26,6 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.2",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
     "uuid": "^8.3.0",
